update React/tic-tac-toe (add idea 5)

--- a/React/tic-tac-toe/src/index.css
+++ b/React/tic-tac-toe/src/index.css
@@ -36,6 +36,11 @@ ol, ul {
   outline: none;
 }
 
+/* Idea 5 */
+.square-cause {
+  background: #ff0;
+}
+
 .kbd-navigation .square:focus {
   background: #ddd;
 }
